Remove custom spacing fixes from main.scss
Removed custom spacing fixes for paragraphs and strong elements.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,14 +39,3 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
-
-/* ---- Custom spacing fixes ---- */
-
-p + ul {
-  margin-top: 0;
-}
-
-strong {
-  display: block;
-  margin-bottom: 0;
-}
